--- a/themes/achp/sass/regions/_homepage_hero.scss
+++ b/themes/achp/sass/regions/_homepage_hero.scss
@@ -11,6 +11,7 @@ h1 {
 }
 
 #homepage_hero_region {
+  border: 10px solid pink;
   padding: 25px 50px;
   height: 500px;
   position: relative;
